--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>draft app</title>
@@ -12,7 +13,8 @@
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
+    rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +30,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129016359-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-129016359-1');
@@ -50,9 +52,11 @@
     Main Section
   ============================-->
   <section id="hero">
+    <h5>draft website
+    </h5>
     <div class="hero-container">
       <!-- <h1>draft -->
-        <span class="blinking-cursor">|</span>
+      <span class="blinking-cursor">|</span>
       <!-- </h1> -->
     </div>
   </section><!-- #main -->
@@ -76,10 +80,8 @@
       <div class="copyright">
 
         <!-- <div class="footer-a"><a href="#">draft, inc.</a></div> -->
-        <div class="footer-a"><a href="https://getsendit.com/sendit-privacy.pdf">privacy</a></div>
-        <div class="footer-a"><a href="https://getsendit.com/terms-of-service.pdf">terms</a></div>
-        <div class="footer-a"><a href=="mailto:draftapp@gmail.com">email</a></div>
-        <div class="footer-a"><a href="httpsgetsendit.com/sendit-privacy.pdf">join now</a></div>
+        <div class="footer-a"><a href="https://downloaddraft.com/draft-terms.pdf">terms of service</a></div>
+        <div class="footer-a"><a href=="mailto:contactdraftapp@gmail.com">email team</a></div>
         <br></br>
         <div class="bottom-img">
         </div>
@@ -104,4 +106,5 @@
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
