--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="copyright">
 
         <!-- <div class="footer-a"><a href="#">draft, inc.</a></div> -->
-        <div class="footer-a"><a href="https://downloaddraft.com/draft-terms.pdf">terms of service</a></div>
+        <div class="footer-a"><a href="https://downloaddraft.com/draft_terms.pdf">terms of service</a></div>
         <div class="footer-a"><a href=="mailto:contactdraftapp@gmail.com">email team</a></div>
         <br></br>
         <div class="bottom-img">
