--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   </script>
 
 
-  <!-- ======================================================= -->
+  <!-- Cloudflare Verification -->
+  <meta name="cf-2fa-verify" content="059b18393cc9574412f3b504edada1eb">
 </head>
 
 <body>
